--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+img {
+    width: 12vw;
+    height: 12vw;
+    max-width: 180px;
+    max-height: 180px;
+    min-width: 60px;
+    min-height: 60px;
+    object-fit: cover;
+    display: block;
+    margin: 0 auto;
+    border-radius: 8px;
+}
 /* Ensure specific images are always in front */
 img[src="yes.png"],
 img[src="window.png"],
@@ -60,8 +72,8 @@ img[src="1.JPG"] {
 img[src^="Pictures/"] {
     width: 12vw;
     height: 12vw;
-    max-width: 180px;
-    max-height: 180px;
+    max-width: 130px;
+    max-height: 130px;
     min-width: 60px;
     min-height: 60px;
     object-fit: cover;
